# atoma-node

./: .codecov.yml  .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  config.example.toml  cursor.toml  deny.toml  docker-compose.dev.yaml  docker-compose.test.yaml  docker-compose.yaml  entrypoint.sh  loki.yaml  ofelia.ini  otel-collector-config.yaml  prometheus.yml  start.sh  tempo.yaml
.cargo/: config.toml
.githooks/: pre-commit  setup-hooks.sh
.github/: dependabot.yml
atoma-bin/: atoma_daemon.rs  atoma_node.rs  telemetry.rs
atoma-chat/: Cargo.toml
atoma-chat/src/: lib.rs  service.rs  types.rs
atoma-client/: Cargo.toml
atoma-client/src/: client.rs  config.rs  lib.rs
atoma-commitments/: Cargo.toml
atoma-commitments/src/: lib.rs  merkle_tree.rs
atoma-commitments/src/crypto/: keccak.rs  mod.rs
atoma-confidential/: Cargo.toml
atoma-confidential/src/: config.rs  key_management.rs  lib.rs  nvml_cc.rs  service.rs  sev_snp.rs  tdx.rs  types.rs  utils.rs
atoma-crypto/: Cargo.toml
atoma-daemon/: Cargo.toml
atoma-daemon/docs/: openapi.yml
atoma-daemon/src/: config.rs  daemon.rs  lib.rs  server.rs  telemetry.rs  types.rs
atoma-daemon/src/components/: openapi.rs
atoma-daemon/src/handlers/: almost_filled_stacks.rs  attestation_disputes.rs  claimed_stacks.rs  mod.rs  nodes.rs  stacks.rs  subscriptions.rs  tasks.rs
atoma-event-subscribe/: Cargo.toml
atoma-event-subscribe/arbitrum/: Cargo.toml
atoma-event-subscribe/arbitrum/src/: lib.rs  subscriber.rs
atoma-event-subscribe/solana/: Cargo.toml
atoma-event-subscribe/solana/src/: main.rs  solana.rs
atoma-event-subscribe/src/: solana.rs
atoma-event-subscribe/sui/: Cargo.toml
atoma-event-subscribe/sui/src/: config.rs  lib.rs  main.rs  subscriber.rs  utils.rs
atoma-helpers/: Cargo.toml
atoma-helpers/src/: firebase_auth.rs  lib.rs
atoma-helpers/src/firebase/: auth.rs  config.rs  mod.rs
atoma-helpers/src/supabase/: auth.rs  config.rs  mod.rs  tables.rs
atoma-inference/: Cargo.toml
atoma-inference/src/: config.rs  core.rs  core_thread.rs  lib.rs  main.rs  model_thread.rs  models.rs  service.rs  specs.rs  types.rs
atoma-inference/src/apis/: hugging_face.rs  mod.rs
atoma-inference/src/candle/: mod.rs  stable_diffusion.rs
atoma-inference/src/jrpc_server/: mod.rs
atoma-inference/src/models/: config.rs  mod.rs  token_output_stream.rs  types.rs
atoma-inference/src/models/candle/: falcon.rs  flux.rs  llama.rs  llama_multi.rs  llama_nccl.rs  llama_nccl_model.rs  mamba.rs  mistral.rs  mixtral.rs  mixtral_nccl.rs  mixtral_nccl_model.rs  mod.rs  phi3.rs  quantized.rs  qwen.rs  stable_diffusion.rs  types.rs
atoma-inference/src/models/candle/helper/: mod.rs  nccl.rs
atoma-inference/src/serving/: cache.rs  config.rs  llm_engine.rs  llm_service.rs  mod.rs  sequence.rs  tokenizer.rs  types.rs  validation.rs  worker.rs
atoma-inference/src/tests/: mod.rs  prompts.rs
atoma-input-manager/: Cargo.toml
atoma-json-rpc/: Cargo.toml
atoma-multi-gpu/: Cargo.toml
atoma-multi-gpu-mock/: Cargo.toml
atoma-multi-gpu/src/: main.rs  token_output_stream.rs  types.rs
atoma-multi-gpu/src/models/llama/: mod.rs  model.rs
atoma-node/: Cargo.toml
atoma-node/src/: atoma_node.rs  lib.rs  main.rs
atoma-output-manager/: Cargo.toml
atoma-output-manager/src/: config.rs  lib.rs
atoma-output-manager/src/firebase/: mod.rs
atoma-output-manager/src/gateway/: mod.rs
atoma-output-manager/src/ipfs/: mod.rs
atoma-output-manager/src/supabase/: mod.rs
atoma-p2p/: Cargo.toml
atoma-p2p-tester/: Cargo.toml  Dockerfile  docker-compose.yml
atoma-p2p-tester/src/: main.rs
atoma-p2p/src/: broadcast_metrics.rs  config.rs  constants.rs  errors.rs  handlers.rs  lib.rs  metrics.rs  service.rs  stack_leader.rs  stack_request_response.rs  tests.rs  timer.rs  types.rs  utils.rs
atoma-service/: .gitignore  Cargo.toml
atoma-service/docs/: openapi.yml
atoma-service/src/: authentication.rs  config.rs  error.rs  lib.rs  middleware.rs  server.rs  streamer.rs  tests.rs  types.rs
atoma-service/src/components/: openapi.rs
atoma-service/src/handlers/: chat_completions.rs  completions.rs  embeddings.rs  image_generations.rs  metrics.rs  mod.rs  prometheus.rs  request_batcher.rs  request_counter.rs  request_model.rs  stop_streamer.rs
atoma-service/src/proxy/: config.rs  mod.rs
atoma-state/: Cargo.toml
atoma-state/src/: config.rs  handlers.rs  lib.rs  state_manager.rs  types.rs
atoma-state/src/migrations/: 20241121103103_create_node_tables.sql  20241202121152_node_public_key_rotation.sql  20241226222104_remove_foreign_keys.sql  20250103113154_add_key_rotation_counter.sql  20250204194732_add_node_usage_table.sql  20250206184237_node_public_key_rotation.sql  20250305222828_update-node_public_key_rotations_table.sql  20250324095038_stacks-is-claimed.sql  20250401165211_indexing-for-stacks-table.sql  20250402120000_drop_total_hash_from_stacks.sql  20250430080652_fiat_balance.sql  20250514211804_split-tokens.sql  20250526102407_usage-per-model.sql  20250528094727_user-id-to-fiat-payments.sql  20250528104721_usage-per-day.sql
atoma-state/src/migrations/migrations/: 20250206184237_node_public_key_rotation.sql
atoma-storage/: Cargo.toml
atoma-sui/: Cargo.toml
atoma-sui/src/: client.rs  config.rs  events.rs  handlers.rs  lib.rs  subscriber.rs
atoma-tdx/: Cargo.toml
atoma-tdx/src/: attestation_manager.rs  decryption.rs  key_rotation.rs  lib.rs  service.rs  types.rs
atoma-types/: Cargo.toml
atoma-types/src/: errors.rs  lib.rs  model_type.rs
atoma-utils/: Cargo.toml
atoma-utils/src/: compression.rs  encryption.rs  hashing.rs  lib.rs
atoma-vllm/: Cargo.toml
atoma-vllm/src/: block.rs  block_allocator.rs  block_manager.rs  config.rs  evictor.rs  lib.rs  llm_engine.rs  llm_service.rs  model_executor.rs  models.rs  policy.rs  sampling_params.rs  scheduler.rs  sequence.rs  token_output_stream.rs  tokenizer.rs  traits.rs  types.rs  validation.rs  worker.rs
atoma-vllm/src/models/: llama.rs  mod.rs
atoma-vllm/src/tests/: llama.rs  mod.rs  tokenizer.json
(+51 files in other folders)
