[workspace]
resolver = "2"

members = [
    "atoma-confidential",
    "atoma-daemon",
    "atoma-p2p",
    "atoma-service",
    "atoma-state",
    "atoma-sui",
    "atoma-utils",
    "atoma-p2p-tester",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.97"
atoma-confidential = { path = "./atoma-confidential" }
atoma-daemon = { path = "./atoma-daemon" }
atoma-p2p = { path = "./atoma-p2p" }
atoma-state = { path = "./atoma-state" }
atoma-sui = { path = "./atoma-sui" }
atoma-utils = { path = "./atoma-utils" }
axum = "0.7.5"
base64 = "0.22.1"
blake2 = "0.10.6"
blake3 = "1.6.1"
bytes = "1.10.0"
ciborium = "0.2.2"
chrono = "0.4.39"
clap = "4.5.31"
config = "0.14.0"
dotenvy = "0.15.7"
fastcrypto = "0.1.8"
flate2 = "1.1.0"
flume = "0.11.1"
futures = "0.3.30"
futures-util = "0.3.30"
hex = "0.4.3"
hf-hub = "0.3.2"
hkdf = "0.12.4"
http = "1.2"
hyper = "1.6.0"
isocountry = "0.3.2"
lazy_static = "1.5.0"
libp2p = "0.55.0"
metrics = "0.23"
metrics-exporter-prometheus = "0.14.0"
nvml-wrapper = { git = "https://github.com/atoma-network/nvml-wrapper.git", branch = "main" }
once_cell = "1.20.3"
opentelemetry = "0.27.0"
opentelemetry_sdk = "0.27.0"
opentelemetry-otlp = "0.27.0"
prometheus = "0.13.4"
rand = "0.8.5"
remote-attestation = { git = "https://github.com/atoma-network/nvrust.git", branch = "main" }
reqwest = "0.12.12"
rs_merkle = "1.4.2"
serde = "1.0.219"
serde_json = "1.0.140"
serde_yaml = "0.9.34"
serial_test = "3.1.1"
sha2 = "0.10.8"
sqlx = "0.8.2"
sui-keys = { git = "https://github.com/mystenlabs/sui", package = "sui-keys", tag = "testnet-v1.45.2" }
sui-sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk", tag = "testnet-v1.45.2" }
sysinfo = "0.33.1"
tempfile = "3.18.0"
thiserror = "2.0.12"
tokenizers = "0.21.0"
tokio = "1.44.0"
toml = "0.8.12"
tower = "0.5.1"
tower-http = "0.6.2"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
tracing-opentelemetry = "0.28.0"
tracing-loki = "0.2.6"
url = "2.5.4"
utoipa = "5.1.1"
utoipa-swagger-ui = "8.0.1"
validator = "0.20.0"
x25519-dalek = "2.0.1"

[patch.crates-io]
hyper-rustls = { git = "https://github.com/rustls/hyper-rustls", branch = "main" }
tokio-rustls = { git = "https://github.com/rustls/tokio-rustls", branch = "main" }
