[package]
name = "atoma-chat"
version.workspace = true
edition.workspace = true

[dependencies]
atoma-crypto = { workspace = true }
atoma-types = { workspace = true }
futures = { workspace = true }
rusqlite = { workspace = true, features = ["bundled"] }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
