[package]
name = "atoma-client"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
atoma-crypto.workspace = true
atoma-types.workspace = true
config.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sui-keys.workspace = true
sui-sdk.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
