[package]
name = "atoma-commitments"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ed25519-consensus.workspace = true
keccak-hash.workspace = true
rayon.workspace = true
thiserror.workspace = true

[dev-dependencies]
rand.workspace = true
rs_merkle.workspace = true
