[package]
name = "atoma-confidential"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aes-gcm = { workspace = true }
anyhow = { workspace = true }
atoma-sui = { workspace = true }
atoma-utils = { workspace = true }
blake3 = { workspace = true }
config = { workspace = true }
dcap-rs = { workspace = true, optional = true }
flate2 = { workspace = true }
flume = { workspace = true }
nvml-wrapper = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tdx = { workspace = true, optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }
x25519-dalek = { workspace = true, features = ["static_secrets"] }

[features]
default = []
tdx = ["dep:dcap-rs", "dep:tdx" ]
