[package]
name = "atoma-confidential"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aes-gcm = { workspace = true }
anyhow = { workspace = true }
atoma-sui = { workspace = true }
atoma-utils = { workspace = true }
base64 = { workspace = true }
blake3 = { workspace = true }
config = { workspace = true }
flume = { workspace = true }
hex = { workspace = true }
nvml-wrapper = { workspace = true }
rand = { workspace = true }
remote-attestation = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
x25519-dalek = { workspace = true, features = ["static_secrets"] }
