[package]
edition.workspace = true
license.workspace = true
name              = "atoma-confidential"
version.workspace = true

[dependencies]
aes-gcm                     = { workspace = true }
anyhow                      = { workspace = true }
atoma-sui                   = { workspace = true }
atoma-utils                 = { workspace = true }
base64                      = { workspace = true }
blake2                      = { workspace = true }
blake3                      = { workspace = true }
config                      = { workspace = true }
fastcrypto                  = { workspace = true }
flume                       = { workspace = true }
hex                         = { workspace = true }
nscq                        = { workspace = true }
nvml-wrapper                = { workspace = true }
rand                        = { workspace = true }
remote-attestation-verifier = { workspace = true }
reqwest                     = { workspace = true }
serde                       = { workspace = true }
serde_json                  = { workspace = true }
sui-keys                    = { workspace = true }
sui-sdk                     = { workspace = true }
thiserror                   = { workspace = true }
tokio                       = { workspace = true }
tracing                     = { workspace = true }
x25519-dalek                = { workspace = true, features = [ "static_secrets" ] }
