[package]
name = "atoma-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "atoma-daemon"
path = "../atoma-bin/atoma_daemon.rs"

[dependencies]
anyhow = { workspace = true }
atoma-state = { workspace = true }
atoma-sui = { workspace = true }
atoma-utils = { workspace = true }
axum = { workspace = true }
blake2 = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
rs_merkle = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sui-sdk = { workspace = true }
tokio = { workspace = true }
once_cell = "1.20"
opentelemetry = { workspace = true, features = ["trace", "metrics", "logs"] }
opentelemetry_sdk = { workspace = true, features = [
  "rt-tokio",
  "trace",
  "metrics",
  "logs",
] }
opentelemetry-otlp = { workspace = true, features = [
  "metrics",
  "grpc-tonic",
  "trace",
  "tls",
  "logs",
] }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = [
  "env-filter",
  "json",
  "local-time",
] }
tracing-opentelemetry = { workspace = true }
tracing-loki = { workspace = true }
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }
url = { workspace = true }


[dev-dependencies]
reqwest = { workspace = true }
