[package]
edition.workspace = true
license.workspace = true
name              = "atoma-daemon"
version.workspace = true

[[bin]]
name = "atoma-daemon"
path = "../atoma-bin/atoma_daemon.rs"

[dependencies]
anyhow = { workspace = true }
atoma-state = { workspace = true }
atoma-sui = { workspace = true }
atoma-utils = { workspace = true }
axum = { workspace = true }
blake2 = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
opentelemetry = { workspace = true, features = [ "logs", "metrics", "trace" ] }
opentelemetry-otlp = { workspace = true, features = [
    "grpc-tonic",
    "logs",
    "metrics",
    "tls",
    "trace",
] }
opentelemetry_sdk = { workspace = true, features = [ "logs", "metrics", "rt-tokio", "trace" ] }
rs_merkle = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sui-sdk = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-loki = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true, features = [ "env-filter", "json", "local-time" ] }
url = { workspace = true }
utoipa = { workspace = true, features = [ "axum_extras" ] }
utoipa-swagger-ui = { workspace = true, features = [ "axum" ] }


[dev-dependencies]
reqwest = { workspace = true }
