[package]
name = "atoma-helpers"
version.workspace = true
edition.workspace = true

[dependencies]
reqwest = { workspace = true, features = ["json"], optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
thiserror.workspace = true
tokio = { workspace = true, optional = true }

[features]
default = ["firebase"]
firebase = ["reqwest", "serde", "serde_json", "tokio"]
