[package]
name = "inference"
version.workspace = true
edition = "2021"

[dependencies]
axum.workspace = true
async-trait.workspace = true
candle.workspace = true
candle-flash-attn = { workspace = true, optional = true }
candle-nn.workspace = true
candle-transformers.workspace = true
config.workspace = true
dotenv.workspace = true
ed25519-consensus.workspace = true
futures.workspace = true
hf-hub.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
image = { workspace = true }
thiserror.workspace = true
tokenizers = { workspace = true }
tokio = { workspace = true, features = ["full", "tracing"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
rand.workspace = true
toml.workspace = true
reqwest = { workspace = true, features = ["json"] }


[features]
accelerate = [
  "candle/accelerate",
  "candle-nn/accelerate",
  "candle-transformers/accelerate",
]
cuda = ["candle/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
cudnn = ["candle/cudnn"]
flash-attn = ["cuda", "candle-transformers/flash-attn", "dep:candle-flash-attn"]
metal = ["candle/metal", "candle-nn/metal", "candle-transformers/metal"]
