[package]
name = "atoma-node"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atoma-sui = { path = "../atoma-event-subscribe/sui/" }
atoma-inference = { path = "../atoma-inference/" }
clap.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
