[package]
name = "atoma-node"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atoma-crypto.workspace = true
atoma-sui.workspace = true
atoma-inference.workspace = true
clap.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[features]
accelerate = [
  "atoma-inference/accelerate",
]
cuda = ["atoma-inference/cuda"]
cudnn = ["atoma-inference/cudnn"]
flash-attn = ["cuda", "atoma-inference/flash-attn"]
metal = ["atoma-inference/metal"]
