[package]
name = "atoma-p2p"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
blake3 = { workspace = true }
bytes = { workspace = true }
ciborium = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
isocountry = { workspace = true }
libp2p = { workspace = true, features = [
	"tokio",
	"dns",
	"identify",
	"gossipsub",
	"mdns",
	"kad",
	"macros",
	"request-response",
	"quic",
	"tcp",
	"yamux",
	"noise",
	"metrics",
	"rsa",
] }
fastcrypto = { workspace = true }
flume = { workspace = true }
futures = { workspace = true }
once_cell = { workspace = true }
opentelemetry = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sui-keys = { workspace = true }
sui-sdk = { workspace = true }
serde_json = { workspace = true }
sysinfo = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
url = { workspace = true }
validator = { workspace = true, features = ["derive"] }

[dev-dependencies]
rand = { workspace = true }
tempfile = { workspace = true }
