[package]
edition.workspace = true
license.workspace = true
name              = "atoma-p2p"
version.workspace = true

[dependencies]
blake3 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
ciborium = { workspace = true }
config = { workspace = true }
fastcrypto = { workspace = true }
flume = { workspace = true }
futures = { workspace = true }
isocountry = { workspace = true }
libp2p = { workspace = true, features = [
    "autonat",
    "dns",
    "gossipsub",
    "identify",
    "kad",
    "macros",
    "mdns",
    "metrics",
    "noise",
    "quic",
    "rsa",
    "tcp",
    "tokio",
    "yamux",
] }
opentelemetry = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = [ "derive" ] }
serde_json = { workspace = true }
sui-keys = { workspace = true }
sui-sdk = { workspace = true }
sysinfo = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [ "full" ] }
tracing = { workspace = true }
url = { workspace = true }
validator = { workspace = true, features = [ "derive" ] }

[dev-dependencies]
rand     = { workspace = true }
tempfile = { workspace = true }
