[package]
name = "atoma-service"
version.workspace = true
edition.workspace = true


[[bin]]
name = "atoma-node"
path = "../atoma-bin/atoma_node.rs"

[dependencies]
axum = { workspace = true }
atoma-sui = { workspace = true }
atoma-state = { workspace = true }
base64 = { workspace = true }
blake2 = { workspace = true }
fastcrypto = { workspace = true }
hex = { workspace = true }
hyper = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
sui-keys = { workspace = true }
sui-sdk = { workspace = true }
tokenizers = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
tower = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }

[dev-dependencies]
rand = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }
