[package]
name = "atoma-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "atoma-node"
path = "../atoma-bin/atoma_node.rs"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
atoma-daemon = { workspace = true }
atoma-sui = { workspace = true }
atoma-state = { workspace = true }
base64 = { workspace = true }
blake2 = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
dotenv = { workspace = true }
fastcrypto = { workspace = true }
flume = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
hf-hub = { workspace = true }
hyper = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
sui-keys = { workspace = true }
sui-sdk = { workspace = true }
tokenizers = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
tower = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json", "local-time"] }
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }
serde_yaml = "0.9.34"

[dev-dependencies]
rand = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }
