[package]
name = "atoma-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "atoma-node"
path = "../atoma-bin/atoma_node.rs"

[dependencies]
anyhow = { workspace = true }
atoma-confidential = { workspace = true }
atoma-daemon = { workspace = true }
atoma-p2p = { workspace = true }
atoma-state = { workspace = true }
atoma-sui = { workspace = true }
atoma-utils = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
flume = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
hf-hub = { workspace = true }
hyper = { workspace = true }
isocountry = { workspace = true }
lazy_static = { workspace = true }
once_cell = { workspace = true }
prometheus = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
sui-keys = { workspace = true }
sui-sdk = { workspace = true }
thiserror = { workspace = true }
tokenizers = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = [
  "env-filter",
  "json",
  "local-time",
] }
url = { workspace = true }
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }
x25519-dalek = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
serial_test = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "postgres"] }
tempfile = { workspace = true }

[features]
tdx = ["atoma-confidential/tdx"]
sev-snp = ["atoma-confidential/sev-snp"]
