[package]
name = "atoma-state"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
atoma-p2p = { workspace = true }
atoma-sui = { workspace = true }
config = { workspace = true }
flume = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "postgres", "migrate"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
utoipa = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
atoma-utils = { workspace = true }
