[package]
name = "atoma-sui"
version.workspace = true
edition.workspace = true

[dependencies]
config.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sui-sdk.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
toml.workspace = true