[package]
name = "atoma-tdx"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
atoma-sui = { workspace = true, optional = true }
dcap-rs = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tdx = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
x25519-dalek = { workspace = true, optional = true, features = ["static_secrets"] }

[features]
default = []
tdx = [
    "dep:atoma-sui",
    "dep:dcap-rs",
    "dep:rand",
    "dep:tokio",
    "dep:tdx",
    "dep:thiserror",
    "dep:tracing",
    "dep:x25519-dalek",
]
