[package]
name = "atoma-types"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde_json.workspace = true
hf-hub.workspace = true
thiserror.workspace = true
candle.workspace = true
image.workspace = true
tokio.workspace = true
