[package]
edition.workspace = true
license.workspace = true
name              = "atoma-utils"
version.workspace = true

[dependencies]
aes-gcm      = { workspace = true }
anyhow       = { workspace = true }
axum         = { workspace = true }
blake2       = { workspace = true }
fastcrypto   = { workspace = true }
flate2       = { workspace = true }
hkdf         = { workspace = true }
rand         = { workspace = true }
serde_json   = { workspace = true }
sha2         = { workspace = true }
sui-sdk      = { workspace = true }
thiserror    = { workspace = true }
tokio        = { workspace = true, features = [ "full" ] }
tracing      = { workspace = true }
x25519-dalek = { workspace = true }
