[package]
name = "atoma-vllm"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO: this dependency should only work with features = "cuda"
candle.workspace = true
indexmap.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
